--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,18 +1,272 @@
 {% extends 'main/main.html' %}{% load static %}{% block content %}
-<div class="container bg-primary shadow-lg rounded">
-    <ul class="list-group">
-        {% for category in data.categories %}
-        <a
-            class="text-decoration-none"
-            href="category/{{category.name|lower}}/"
-        >
-            <div class="list-group-item">
-                <h6>{{category.name}}</h6>
-                <hr />
-                <p class="text-secondary">{{category.description}}</p>
+<div class="inner-main-body p-2 p-sm-3 collapse forum-content show">
+    {% for post in data.posts %}
+    <div class="card mb-2">
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item">
+                <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="{{ post.profile.avatar_url }}"
+                        class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                <div class="media-body">
+                    <h6>
+                        <a href="category/{{ post.category|lower }}/{{ post.id }}/" data-toggle="collapse"
+                            data-target=".forum-content" class="text-body">{{ post.title }}</a>
+                    </h6>
+                    <p class="text-secondary">
+                        {{ post.body|truncatechars:85}}
+                    </p>
+                    <p class="text-muted">
+                        <a href="javascript:void(0)">{{ post.last_comment_user }}</a>
+                        replied
+                        <span class="text-secondary font-weight-bold">{{post.last_comment_time_human}}</span>
+                    </p>
+                </div>
+                <div class="text-muted small text-center align-self-center">
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
+                    <span><i class="far fa-comment ml-2"></i> {{post.comments_count}}
+                    </span>
+                </div>
             </div>
-        </a>
-        {% endfor %}
+        </div>
+    </div>
+    {% endfor %}
+    <div class="card mb-2">
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item">
+                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
+                        src="https://bootdey.com/img/Content/avatar/avatar2.png" class="mr-3 rounded-circle" width="50"
+                        alt="User" /></a>
+                <div class="media-body">
+                    <h6>
+                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Laravel 7
+                            database backup</a>
+                    </h6>
+                    <p class="text-secondary">
+                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+                        lorem ipsum dolor sit amet
+                    </p>
+                    <p class="text-muted">
+                        <a href="javascript:void(0)">jlrdw</a> replied
+                        <span class="text-secondary font-weight-bold">3 hours ago</span>
+                    </p>
+                </div>
+                <div class="text-muted small text-center align-self-center">
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 18</span>
+                    <span><i class="far fa-comment ml-2"></i> 1</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-2">
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item">
+                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
+                        src="https://bootdey.com/img/Content/avatar/avatar3.png" class="mr-3 rounded-circle" width="50"
+                        alt="User" /></a>
+                <div class="media-body">
+                    <h6>
+                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Http client
+                            post raw content</a>
+                    </h6>
+                    <p class="text-secondary">
+                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+                        lorem ipsum dolor sit amet
+                    </p>
+                    <p class="text-muted">
+                        <a href="javascript:void(0)">ciungulete</a> replied
+                        <span class="text-secondary font-weight-bold">7 hours ago</span>
+                    </p>
+                </div>
+                <div class="text-muted small text-center align-self-center">
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 32</span>
+                    <span><i class="far fa-comment ml-2"></i> 2</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-2">
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item">
+                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
+                        src="https://bootdey.com/img/Content/avatar/avatar4.png" class="mr-3 rounded-circle" width="50"
+                        alt="User" /></a>
+                <div class="media-body">
+                    <h6>
+                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Top rated
+                            filter not working</a>
+                    </h6>
+                    <p class="text-secondary">
+                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+                        lorem ipsum dolor sit amet
+                    </p>
+                    <p class="text-muted">
+                        <a href="javascript:void(0)">bugsysha</a> replied
+                        <span class="text-secondary font-weight-bold">11 hours ago</span>
+                    </p>
+                </div>
+                <div class="text-muted small text-center align-self-center">
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 49</span>
+                    <span><i class="far fa-comment ml-2"></i> 9</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-2">
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item">
+                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
+                        src="https://bootdey.com/img/Content/avatar/avatar5.png" class="mr-3 rounded-circle" width="50"
+                        alt="User" /></a>
+                <div class="media-body">
+                    <h6>
+                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Create a
+                            delimiter field</a>
+                    </h6>
+                    <p class="text-secondary">
+                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+                        lorem ipsum dolor sit amet
+                    </p>
+                    <p class="text-muted">
+                        <a href="javascript:void(0)">jackalds</a> replied
+                        <span class="text-secondary font-weight-bold">12 hours ago</span>
+                    </p>
+                </div>
+                <div class="text-muted small text-center align-self-center">
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 65</span>
+                    <span><i class="far fa-comment ml-2"></i> 10</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-2">
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item">
+                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
+                        src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50"
+                        alt="User" /></a>
+                <div class="media-body">
+                    <h6>
+                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">One model 4
+                            tables</a>
+                    </h6>
+                    <p class="text-secondary">
+                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+                        lorem ipsum dolor sit amet
+                    </p>
+                    <p class="text-muted">
+                        <a href="javascript:void(0)">bugsysha</a> replied
+                        <span class="text-secondary font-weight-bold">14 hours ago</span>
+                    </p>
+                </div>
+                <div class="text-muted small text-center align-self-center">
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 45</span>
+                    <span><i class="far fa-comment ml-2"></i> 4</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-2">
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item">
+                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
+                        src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50"
+                        alt="User" /></a>
+                <div class="media-body">
+                    <h6>
+                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Auth attempt
+                            returns false</a>
+                    </h6>
+                    <p class="text-secondary">
+                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+                        lorem ipsum dolor sit amet
+                    </p>
+                    <p class="text-muted">
+                        <a href="javascript:void(0)">michaeloravec</a> replied
+                        <span class="text-secondary font-weight-bold">18 hours ago</span>
+                    </p>
+                </div>
+                <div class="text-muted small text-center align-self-center">
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 70</span>
+                    <span><i class="far fa-comment ml-2"></i> 3</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <ul class="pagination pagination-sm pagination-circle justify-content-center mb-0">
+        <li class="page-item disabled">
+            <span class="page-link has-icon"><i class="material-icons">chevron_left</i></span>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="javascript:void(0)">1</a>
+        </li>
+        <li class="page-item active"><span class="page-link">2</span></li>
+        <li class="page-item">
+            <a class="page-link" href="javascript:void(0)">3</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link has-icon" href="javascript:void(0)"><i class="material-icons">chevron_right</i></a>
+        </li>
     </ul>
+</div>
+
+<div class="inner-main-body p-2 p-sm-3 collapse forum-content">
+    <a href="#" class="btn btn-light btn-sm mb-3 has-icon" data-toggle="collapse" data-target=".forum-content"><i
+            class="fa fa-arrow-left mr-2"></i>Back</a>
+    <div class="card mb-2">
+        <div class="card-body">
+            <div class="media forum-item">
+                <a href="javascript:void(0)" class="card-link">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="rounded-circle" width="50"
+                        alt="User" />
+                    <small class="d-block text-center text-muted">Newbie</small>
+                </a>
+                <div class="media-body ml-3">
+                    <a href="javascript:void(0)" class="text-secondary">Mokrani</a>
+                    <small class="text-muted ml-2">1 hour ago</small>
+                    <h5 class="mt-1">Realtime fetching data</h5>
+                    <div class="mt-3 font-size-sm">
+                        <p>Hellooo :)</p>
+                        <p>
+                            I'm newbie with laravel and i want to fetch data
+                            from database in realtime for my dashboard anaytics
+                            and i found a solution with ajax but it dosen't work
+                            if any one have a simple solution it will be helpful
+                        </p>
+                        <p>Thank</p>
+                    </div>
+                </div>
+                <div class="text-muted small text-center">
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
+                    <span><i class="far fa-comment ml-2"></i> 3</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-2">
+        <div class="card-body">
+            <div class="media forum-item">
+                <a href="javascript:void(0)" class="card-link">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="rounded-circle" width="50"
+                        alt="User" />
+                    <small class="d-block text-center text-muted">Pro</small>
+                </a>
+                <div class="media-body ml-3">
+                    <a href="javascript:void(0)" class="text-secondary">drewdan</a>
+                    <small class="text-muted ml-2">1 hour ago</small>
+                    <div class="mt-3 font-size-sm">
+                        <p>What exactly doesn't work with your ajax calls?</p>
+                        <p>
+                            Also, WebSockets are a great solution for realtime
+                            data on a dashboard. Laravel offers this out of the
+                            box using broadcasting
+                        </p>
+                    </div>
+                    <button class="btn btn-xs text-muted has-icon">
+                        <i class="fa fa-heart" aria-hidden="true"></i>1
+                    </button>
+                    <a href="javascript:void(0)" class="text-muted small">Reply</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
