--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -5,119 +5,156 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Forum</title>
-        <meta name="description" content="Forum website powered by Django" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
-        />
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Forum</title>
+    <meta name="description" content="Forum website powered by Django" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+        integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+</head>
+
+<body>
+    <!--[if lt IE 7]>
             <p class="browsehappy">
                 You are using an <strong>outdated</strong> browser. Please
                 <a href="#">upgrade your browser</a> to improve your experience.
             </p>
         <![endif]-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">Navbar</a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
+    <div class="inner-wrapper">
+        <div class="inner-sidebar">
+            <div class="inner-sidebar-header justify-content-center">
+                <button class="btn btn-primary has-icon btn-block" type="button" data-toggle="modal"
+                    data-target="#threadModal">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-plus mr-2">
+                        <line x1="12" y1="5" x2="12" y2="19"></line>
+                        <line x1="5" y1="12" x2="19" y2="12"></line>
+                    </svg>
+                    NEW DISCUSSION
                 </button>
-                <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="/"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                id="navbarDropdown"
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                Dropdown
-                            </a>
-                            <ul
-                                class="dropdown-menu"
-                                aria-labelledby="navbarDropdown"
-                            >
-                                <li>
-                                    <a class="dropdown-item" href="#">Action</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#"
-                                        >Another action</a
-                                    >
-                                </li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li>
-                                    <a class="dropdown-item" href="#"
-                                        >Something else here</a
-                                    >
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a
-                                class="nav-link disabled"
-                                href="#"
-                                tabindex="-1"
-                                aria-disabled="true"
-                                >Disabled</a
-                            >
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input
-                            class="form-control me-2"
-                            type="search"
-                            placeholder="Search"
-                            aria-label="Search"
-                        />
-                        <button class="btn btn-outline-success" type="submit">
-                            Search
-                        </button>
-                    </form>
+            </div>
+
+            <div class="inner-sidebar-body p-0">
+                <div class="p-3 h-100" data-simplebar="init">
+                    <div class="simplebar-wrapper" style="margin: -16px">
+                        <div class="simplebar-height-auto-observer-wrapper">
+                            <div class="simplebar-height-auto-observer"></div>
+                        </div>
+                        <div class="simplebar-mask">
+                            <div class="simplebar-offset" style="right: 0px; bottom: 0px">
+                                <div class="simplebar-content-wrapper" style="
+                                            height: 100%;
+                                            overflow: hidden scroll;
+                                        ">
+                                    <div class="simplebar-content" style="padding: 16px">
+                                        <nav class="nav nav-pills nav-gap-y-1 flex-column">
+                                            <a href="javascript:void(0)"
+                                                class="nav-link nav-link-faded has-icon active">All Threads</a>
+                                            <a href="javascript:void(0)"
+                                                class="nav-link nav-link-faded has-icon">Popular this week</a>
+                                            <a href="javascript:void(0)"
+                                                class="nav-link nav-link-faded has-icon">Popular all time</a>
+                                            <a href="javascript:void(0)"
+                                                class="nav-link nav-link-faded has-icon">Solved</a>
+                                            <a href="javascript:void(0)"
+                                                class="nav-link nav-link-faded has-icon">Unsolved</a>
+                                            <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">No
+                                                replies yet</a>
+                                        </nav>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="simplebar-placeholder" style="width: 234px; height: 292px"></div>
+                    </div>
+                    <div class="simplebar-track simplebar-horizontal" style="visibility: hidden">
+                        <div class="simplebar-scrollbar" style="width: 0px; display: none"></div>
+                    </div>
+                    <div class="simplebar-track simplebar-vertical" style="visibility: visible">
+                        <div class="simplebar-scrollbar" style="
+                                    height: 151px;
+                                    display: block;
+                                    transform: translate3d(0px, 0px, 0px);
+                                "></div>
+                    </div>
                 </div>
             </div>
-        </nav>
-        {% block content %}{% endblock content %}
+        </div>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"
-        ></script>
-        <script src="" async defer></script>
-    </body>
+        <div class="inner-main">
+            <div class="inner-main-header">
+                <a class="nav-link nav-icon rounded-circle nav-link-faded mr-3 d-md-none" href="#"
+                    data-toggle="inner-sidebar"><i class="material-icons">arrow_forward_ios</i></a>
+                <select class="custom-select custom-select-sm w-auto mr-1">
+                    <option selected="">Latest</option>
+                    <option value="1">Popular</option>
+                    <option value="3">Solved</option>
+                    <option value="3">Unsolved</option>
+                    <option value="3">No Replies Yet</option>
+                </select>
+                <span class="input-icon input-icon-sm ml-auto w-auto">
+                    <input type="text"
+                        class="form-control form-control-sm bg-gray-200 border-gray-200 shadow-none mb-4 mt-4"
+                        placeholder="Search forum" />
+                </span>
+            </div>
+
+            <!-- Inner main body -->
+            {% block content %}{% endblock content %}
+
+            <div class="modal fade" id="threadModal" tabindex="-1" role="dialog" aria-labelledby="threadModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <form>
+                            <div class="modal-header d-flex align-items-center bg-primary text-white">
+                                <h6 class="modal-title mb-0" id="threadModalLabel">
+                                    New Discussion
+                                </h6>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">×</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="form-group">
+                                    <label for="threadTitle">Title</label>
+                                    <input type="text" class="form-control" id="threadTitle" placeholder="Enter title"
+                                        autofocus="" />
+                                </div>
+                                <textarea class="form-control summernote" style="display: none"></textarea>
+
+                                <div class="custom-file form-control-sm mt-3" style="max-width: 300px">
+                                    <input type="file" class="custom-file-input" id="customFile" multiple="" />
+                                    <label class="custom-file-label" for="customFile">Attachment</label>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-light" data-dismiss="modal">
+                                    Cancel
+                                </button>
+                                <button type="button" class="btn btn-primary">
+                                    Post
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
+    <script src="" async defer></script>
+</body>
+
 </html>
