🌪 Refactoring main.utils to common.utils with generic Request_Context class & adding unique view functionality to posts

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -21,7 +21,7 @@
                     </p>
                 </div>
                 <div class="text-muted small text-center align-self-center">
-                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
+                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> {{post.views_unique_count}}</span>
                     <span><i class="far fa-comment ml-2"></i> {{post.comments_count}}
                     </span>
                 </div>
