--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
         integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -27,6 +32,21 @@
                 <a href="#">upgrade your browser</a> to improve your experience.
             </p>
         <![endif]-->
+    <nav class="navbar navbar-expand bg-dark justify-content-between">
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link text-white" href="/">
+                    <i class="fas fa-coffee text-warning pl-2 pr-2"></i> Django Forum
+                </a>
+            </li>
+        </ul>
+        {% if data.user.is_authenticated %}
+        <a class="nav-link text-white" href="/account/">{{data.user.username}}</a>
+        <a class="nav-link btn bg-info" href="/account/logout/">Logout</a>
+        {% else %}
+        <a class="nav-link btn bg-primary" href="/account/auth/">Login</a>
+        {% endif %}
+    </nav>
     <div class="inner-wrapper">
         <div class="inner-sidebar">
             <div class="inner-sidebar-header justify-content-center">
