🪬 Adding messages to auth page forms

--- a/user/templates/user/auth.html
+++ b/user/templates/user/auth.html
@@ -7,6 +7,15 @@
                 <form action="/account/login/" method="POST">
                     <h3>Login</h3>
                     {% csrf_token %}
+                    {% if messages %}
+                    <div class="messages">
+                        {% for message in messages %}
+                        {% if 'login' in message.tags %}
+                        <div class="alert alert-danger">{{ message }}</div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
                     {{AuthenticationForm|crispy}}
                     <button type="submit" class="btn btn-primary">Sign In</button>
                 </form>
@@ -15,6 +24,15 @@
                 <form action="/account/register/" method="POST">
                     <h3>Register</h3>
                     {% csrf_token %}
+                    {% if messages %}
+                    <div class="messages">
+                        {% for message in messages %}
+                        {% if 'register' in message.tags %}
+                        <div class="alert alert-danger">{{ message }}</div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
                     {{SignUpForm|crispy}}
                     <button type="submit" class="btn btn-primary">Sign Up</button>
                 </form>
