🐎 Adding post functionality to main.html

--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -155,11 +155,13 @@
             {% block content %}{% endblock content %}
 
             {% if request.user.is_authenticated %}
+            {% load crispy_forms_tags %}
             <div class="modal fade" id="threadModal" tabindex="-1" role="dialog" aria-labelledby="threadModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
-                        <form>
+                        <form method="POST" action="/create_post/">
+                            {% csrf_token %}
                             <div class="modal-header d-flex align-items-center bg-primary text-white">
                                 <h6 class="modal-title mb-0" id="threadModalLabel">
                                     New Discussion
@@ -169,23 +171,22 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <div class="form-group">
-                                    <label for="threadTitle">Title</label>
-                                    <input type="text" class="form-control" id="threadTitle" placeholder="Enter title"
-                                        autofocus="" />
+                                {% if messages %}
+                                <div class="messages">
+                                    {% for message in messages %}
+                                    {% if 'login' in message.tags %}
+                                    <div class="alert alert-danger">{{ message }}</div>
+                                    {% endif %}
+                                    {% endfor %}
                                 </div>
-                                <textarea class="form-control summernote" style="display: none"></textarea>
-
-                                <div class="custom-file form-control-sm mt-3" style="max-width: 300px">
-                                    <input type="file" class="custom-file-input" id="customFile" multiple="" />
-                                    <label class="custom-file-label" for="customFile">Attachment</label>
-                                </div>
+                                {% endif %}
+                                {{data.PostForm|crispy}}
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-light" data-dismiss="modal">
                                     Cancel
                                 </button>
-                                <button type="button" class="btn btn-primary">
+                                <button type="submit" class="btn btn-primary">
                                     Post
                                 </button>
                             </div>
