🛠️ Fix couldn't access post from category page

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -8,7 +8,7 @@
                         class="mr-3 rounded-circle" width="50" alt="User" /></a>
                 <div class="media-body">
                     <h6>
-                        <a href="category/{{ post.category|lower }}/{{ post.id }}/"
+                        <a href="/category/{{ post.category|lower }}/{{ post.id }}/"
                             class="text-body">{{ post.title }}</a>
                     </h6>
                     <p class="text-secondary">
