--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -181,7 +181,7 @@
                                     {% endfor %}
                                 </div>
                                 {% endif %}
-                                {{data.PostForm|crispy}}
+                                {{data.get_initial_post_form|crispy}}
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-light" data-dismiss="modal">
