🎄 + basic paginator & - placeholder posts

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -29,182 +29,65 @@
         </div>
     </div>
     {% endfor %}
-    <div class="card mb-2">
-        <div class="card-body p-2 p-sm-3">
-            <div class="media forum-item">
-                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
-                        src="https://bootdey.com/img/Content/avatar/avatar2.png" class="mr-3 rounded-circle" width="50"
-                        alt="User" /></a>
-                <div class="media-body">
-                    <h6>
-                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Laravel 7
-                            database backup</a>
-                    </h6>
-                    <p class="text-secondary">
-                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-                        lorem ipsum dolor sit amet
-                    </p>
-                    <p class="text-muted">
-                        <a href="javascript:void(0)">jlrdw</a> replied
-                        <span class="text-secondary font-weight-bold">3 hours ago</span>
-                    </p>
-                </div>
-                <div class="text-muted small text-center align-self-center">
-                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 18</span>
-                    <span><i class="far fa-comment ml-2"></i> 1</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card mb-2">
-        <div class="card-body p-2 p-sm-3">
-            <div class="media forum-item">
-                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
-                        src="https://bootdey.com/img/Content/avatar/avatar3.png" class="mr-3 rounded-circle" width="50"
-                        alt="User" /></a>
-                <div class="media-body">
-                    <h6>
-                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Http client
-                            post raw content</a>
-                    </h6>
-                    <p class="text-secondary">
-                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-                        lorem ipsum dolor sit amet
-                    </p>
-                    <p class="text-muted">
-                        <a href="javascript:void(0)">ciungulete</a> replied
-                        <span class="text-secondary font-weight-bold">7 hours ago</span>
-                    </p>
-                </div>
-                <div class="text-muted small text-center align-self-center">
-                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 32</span>
-                    <span><i class="far fa-comment ml-2"></i> 2</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card mb-2">
-        <div class="card-body p-2 p-sm-3">
-            <div class="media forum-item">
-                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
-                        src="https://bootdey.com/img/Content/avatar/avatar4.png" class="mr-3 rounded-circle" width="50"
-                        alt="User" /></a>
-                <div class="media-body">
-                    <h6>
-                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Top rated
-                            filter not working</a>
-                    </h6>
-                    <p class="text-secondary">
-                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-                        lorem ipsum dolor sit amet
-                    </p>
-                    <p class="text-muted">
-                        <a href="javascript:void(0)">bugsysha</a> replied
-                        <span class="text-secondary font-weight-bold">11 hours ago</span>
-                    </p>
-                </div>
-                <div class="text-muted small text-center align-self-center">
-                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 49</span>
-                    <span><i class="far fa-comment ml-2"></i> 9</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card mb-2">
-        <div class="card-body p-2 p-sm-3">
-            <div class="media forum-item">
-                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
-                        src="https://bootdey.com/img/Content/avatar/avatar5.png" class="mr-3 rounded-circle" width="50"
-                        alt="User" /></a>
-                <div class="media-body">
-                    <h6>
-                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Create a
-                            delimiter field</a>
-                    </h6>
-                    <p class="text-secondary">
-                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-                        lorem ipsum dolor sit amet
-                    </p>
-                    <p class="text-muted">
-                        <a href="javascript:void(0)">jackalds</a> replied
-                        <span class="text-secondary font-weight-bold">12 hours ago</span>
-                    </p>
-                </div>
-                <div class="text-muted small text-center align-self-center">
-                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 65</span>
-                    <span><i class="far fa-comment ml-2"></i> 10</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card mb-2">
-        <div class="card-body p-2 p-sm-3">
-            <div class="media forum-item">
-                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
-                        src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50"
-                        alt="User" /></a>
-                <div class="media-body">
-                    <h6>
-                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">One model 4
-                            tables</a>
-                    </h6>
-                    <p class="text-secondary">
-                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-                        lorem ipsum dolor sit amet
-                    </p>
-                    <p class="text-muted">
-                        <a href="javascript:void(0)">bugsysha</a> replied
-                        <span class="text-secondary font-weight-bold">14 hours ago</span>
-                    </p>
-                </div>
-                <div class="text-muted small text-center align-self-center">
-                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 45</span>
-                    <span><i class="far fa-comment ml-2"></i> 4</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card mb-2">
-        <div class="card-body p-2 p-sm-3">
-            <div class="media forum-item">
-                <a href="#" data-toggle="collapse" data-target=".forum-content"><img
-                        src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50"
-                        alt="User" /></a>
-                <div class="media-body">
-                    <h6>
-                        <a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">Auth attempt
-                            returns false</a>
-                    </h6>
-                    <p class="text-secondary">
-                        lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-                        lorem ipsum dolor sit amet
-                    </p>
-                    <p class="text-muted">
-                        <a href="javascript:void(0)">michaeloravec</a> replied
-                        <span class="text-secondary font-weight-bold">18 hours ago</span>
-                    </p>
-                </div>
-                <div class="text-muted small text-center align-self-center">
-                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 70</span>
-                    <span><i class="far fa-comment ml-2"></i> 3</span>
-                </div>
-            </div>
-        </div>
-    </div>
     <ul class="pagination pagination-sm pagination-circle justify-content-center mb-0">
+        {% if data.posts.has_previous %}
+        <li class="page-item">
+            <span class="page-link has-icon">
+                <a href="?page=1">
+                    <i class="material-icons">&laquo&laquo</i> First
+                </a>
+            </span>
+        </li>
+        <li class="page-item">
+            <span class="page-link has-icon">
+                <a href="?page={{data.posts.previous_page_number}}">
+                    <i class="material-icons">&laquo</i>
+                </a>
+            </span>
+        </li>
+        {% else %}
         <li class="page-item disabled">
-            <span class="page-link has-icon"><i class="material-icons">chevron_left</i></span>
+            <span class="page-link has-icon">
+                &laquo&laquo First
+            </span>
+        </li>
+        <li class="page-item disabled">
+            <span class="page-link has-icon">
+                <i class="material-icons">&laquo</i>
+            </span>
+        </li>
+        {% endif %}
+
+        <li class="page-item active">
+            <span class="page-link">
+                Page {{data.posts.number}} of {{data.posts.paginator.num_pages}}
+            </span>
+        </li>
+
+        {% if data.posts.has_next %}
+        <li class="page-item">
+            <span class="page-link has-icon"><a href="?page={{data.posts.next_page_number}}">
+                    <i class="material-icons">&raquo</i>
+                </a>
+            </span>
         </li>
         <li class="page-item">
-            <a class="page-link" href="javascript:void(0)">1</a>
+            <span class="page-link has-icon">
+                <a href="?page={{data.posts.paginator.num_pages}}">Last <i class="material-icons">&raquo&raquo</i></a>
+            </span>
         </li>
-        <li class="page-item active"><span class="page-link">2</span></li>
-        <li class="page-item">
-            <a class="page-link" href="javascript:void(0)">3</a>
+        {% else %}
+        <li class="page-item disabled">
+            <span class="page-link has-icon">
+                <i class="material-icons">&raquo</i>
+            </span>
         </li>
-        <li class="page-item">
-            <a class="page-link has-icon" href="javascript:void(0)"><i class="material-icons">chevron_right</i></a>
+        <li class="page-item disabled">
+            <span class="page-link has-icon">
+                Last <i class="material-icons">&raquo&raquo</i>
+            </span>
         </li>
+        {% endif %}
     </ul>
 </div>
 
