🎳 Fixing height for profile pictures

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,7 +5,7 @@
         <div class="card-body p-2 p-sm-3">
             <div class="media forum-item">
                 <a href="/account/{{post.profile.displayname}}/"><img src="{{ post.profile.avatar_url }}"
-                        class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                        class="mr-3 rounded-circle" height="50" width="50" alt="User" /></a>
                 <div class="media-body">
                     <h6>
                         <a href="/category/{{ post.category|lower }}/{{ post.id }}/"
