--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -5,7 +5,7 @@
             <div class="media forum-item">
                 <h5>{{ post.profile.displayname }}</h5>
                 <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="{{ post.profile.avatar_url }}"
-                        class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                        class="mr-3 rounded-circle" height="50" width="50" alt="User" /></a>
                 <div class="media-body">
                     <div class="card-title">
                         <h3>
@@ -34,7 +34,8 @@
             <div class="media forum-item">
                 <h5>{{ comment.profile.displayname }}</h5>
                 <a href="#" data-toggle="collapse" data-target=".forum-content"><img
-                        src="{{ comment.profile.avatar_url }}" class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                        src="{{ comment.profile.avatar_url }}" class="mr-3 rounded-circle" height="50" width="50"
+                        alt="User" /></a>
                 <div class="media-body">
                     <div class="card container">
                         <p class="card-text">
