--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -1,15 +1,15 @@
 {% extends 'main/main.html' %}{% load static %}{% block content %}
 <div class="inner-main-body p-2 p-sm-3 collapse forum-content show">
     <div class="card mb-2 container">
-        <div class="card-body py-2 pr-2 pr-sm-3 py-sm-3 pl-0">
-            <div class="media forum-item">
-                <div class="d-flex flex-column py-1 px-3">
-                    <h5 class="mx-auto">{{ post.profile.displayname }}</h5>
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item row">
+                <div class="d-flex flex-column py-1 px-3 col-2">
+                    <h5 class="mx-auto text-center">{{ post.profile.displayname }}</h5>
                     <a class="mx-auto" href="#" data-toggle="collapse" data-target=".forum-content"><img
                             src="{{ post.profile.avatar_url }}" class="rounded-circle" height="50" width="50"
                             alt="User" /></a>
                 </div>
-                <div class="media-body">
+                <div class="media-body col">
                     <div class="card-title">
                         <h3>
                             <a href="" data-toggle="collapse" data-target=".forum-content"
@@ -33,15 +33,15 @@
     </div>
     {% for comment in post.comments %}
     <div class="card mb-2 container">
-        <div class="card-body py-2 pr-2 pr-sm-3 py-sm-3 pl-0">
-            <div class="media forum-item">
-                <div class="d-flex flex-column px-3">
-                    <h5 class="mx-auto">{{ comment.profile.displayname }}</h5>
+        <div class="card-body p-2 p-sm-3">
+            <div class="media forum-item row">
+                <div class="d-flex flex-column px-3 col-2">
+                    <h5 class="mx-auto text-center">{{ comment.profile.displayname }}</h5>
                     <a class="mx-auto" href="#" data-toggle="collapse" data-target=".forum-content"><img
                             src="{{ comment.profile.avatar_url }}" class="rounded-circle" height="50" width="50"
                             alt="User" /></a>
                 </div>
-                <div class="media-body">
+                <div class="media-body col">
                     <div class="card container">
                         <p class="card-text">
                             {{ comment.body }}
@@ -65,5 +65,47 @@
     </div>
     {% endfor %}
 </div>
-<button class="btn btn-primary"><i class="fas fa-plus rounded-circle"></i></button>
+{% if request.user.is_authenticated %}
+{% load crispy_forms_tags %}
+<button class="btn btn-primary rounded-circle btn-floating"
+    style="position: absolute; bottom: 2em; right: 2em; height: 3em; width: 3em;" data-toggle="modal"
+    data-target="#commentModal"><i class="fas fa-plus"></i></button>
+<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <form method="POST" action="{{data.request.path}}create_comment/">
+                {% csrf_token %}
+                <div class="modal-header">
+                    <h5 class="modal-title" id="commentModalLabel">Add Comment</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {% if messages %}
+                    <div class="messages">
+                        {% for message in messages %}
+                        {% if 'add_comment' in message.tags %}
+                        <div class="alert alert-danger">{{ message }}</div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {{ CommentForm|crispy }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-dismiss="modal">
+                        Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary">
+                        Post
+                    </button>
+                </div>
+            </form>
+            </form>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock content %}
