--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -1,6 +1,6 @@
 {% extends 'main/main.html' %}{% load static %}{% block content %}
 <div class="inner-main-body p-2 p-sm-3 collapse forum-content show">
-    <div class="card mb-2 container">
+    <div class="card mb-2 container border border-danger">
         <div class="card-body p-2 p-sm-3">
             <div class="media forum-item row">
                 <div class="d-flex flex-column py-1 px-3 col-2">
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    {% for comment in post.comments %}
+    {% for comment in data.comments %}
     <div class="card mb-2 container">
         <div class="card-body p-2 p-sm-3">
             <div class="media forum-item row">
@@ -64,6 +64,67 @@
         </div>
     </div>
     {% endfor %}
+    <ul class="pagination pagination-sm pagination-circle justify-content-center mb-0">
+        {% if data.comments.has_previous %}
+        <li class="page-item">
+            <span class="page-link has-icon">
+                <a href="?page=1">
+                    <i class="material-icons">&laquo&laquo</i> First
+                </a>
+            </span>
+        </li>
+        <li class="page-item">
+            <span class="page-link has-icon">
+                <a href="?page={{data.comments.previous_page_number}}">
+                    <i class="material-icons">&laquo</i>
+                </a>
+            </span>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <span class="page-link has-icon">
+                &laquo&laquo First
+            </span>
+        </li>
+        <li class="page-item disabled">
+            <span class="page-link has-icon">
+                <i class="material-icons">&laquo</i>
+            </span>
+        </li>
+        {% endif %}
+
+        <li class="page-item active">
+            <span class="page-link">
+                Page {{data.comments.number}} of {{data.comments.paginator.num_pages}}
+            </span>
+        </li>
+
+        {% if data.comments.has_next %}
+        <li class="page-item">
+            <span class="page-link has-icon"><a href="?page={{data.comments.next_page_number}}">
+                    <i class="material-icons">&raquo</i>
+                </a>
+            </span>
+        </li>
+        <li class="page-item">
+            <span class="page-link has-icon">
+                <a href="?page={{data.comments.paginator.num_pages}}">Last <i
+                        class="material-icons">&raquo&raquo</i></a>
+            </span>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <span class="page-link has-icon">
+                <i class="material-icons">&raquo</i>
+            </span>
+        </li>
+        <li class="page-item disabled">
+            <span class="page-link has-icon">
+                Last <i class="material-icons">&raquo&raquo</i>
+            </span>
+        </li>
+        {% endif %}
+    </ul>
 </div>
 {% if request.user.is_authenticated %}
 {% load crispy_forms_tags %}
